Use immutable annotation copy list (#391)